2007-02-02  Thomas Moschny  <thomas.moschny@gmx.de>

	* roster_delta.{cc|hh}
	(get_markings_from_roster_delta, get_content_from_roster_delta):
	New functions. Both try to extract node-specific information from
	a single roster delta.

	* database.{cc|hh} (get_markings, get_file_content): New functions
	using roster deltas to find the set of markings resp. the content
	hash for a given node and revision id.

	* annotate.cc (do_annotate_node): Utilize the new methods. Store
	the set of markings and the file content hash in the work_unit for
	the corresponding revision, to avoid fetching the same information
	twice. Don't fetch content hash or markings for marked ancestors,
	as we can deduce that information from the descendants.

2007-02-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/*: Import SQLite 3.3.12.

2007-01-30  Nathaniel Smith  <njs@pobox.com>

	* po/es.po: Fix a format string that was breaking the build.

2007-01-30  Nathaniel Smith  <njs@pobox.com>

	* vocab.cc (verify(hexenc<id>)): Rename from verify_full.  Now
	actually runs (!!!).
	(verify_hexenc_id): New test.
	* vocab.hh (is_xdigit): Disallow capitalized hex digits, above
	test now passes.
	* constants.cc (regex_legal_id_bytes): No capital hex digits here,
	either!

2007-01-29  Thomas Keller  <me@thomaskeller.biz>

	* added some lua hooks to run a script after revs or certs have 
	arrived via netsync for a particular branch

2007-01-29  Matthew Gregan  <kinetik@orcon.net.nz>

	* INSTALL: Drop the libboost-serialization-dev requirement since
	it is no longer needed.

2007-01-27  Derek Scherger  <derek@echologic.com>

	* configure.ac: add AC_FUNC_MMAP check so that the ifdef for
	HAVE_MMAP in rcs_file.cc might work
	* rcs_file.cc: change ifdef for HAVE_FCNTL to HAVE_FCNTL_H to
	match config.h

2007-01-27  Timothy Brownawell  <tbrownaw@gmail.com>

	Make vocab-from-string constructors explicit. Fix (some) places
	where variables or parameters were given the wrong type.
