@@ -1,3 +1,9 @@
+2007-02-06  Thomas Moschny  <thomas.moschny@gmx.de>
+
+	* roster_delta.cc (get_content_from_roster_delta): Added a missing
+	case: We might need to fetch a file's hash from the set of added
+	files of the roster_delta in question.
+
 2007-02-02  Thomas Moschny  <thomas.moschny@gmx.de>
 
 	* roster_delta.{cc|hh}
